# happy-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  build.sh  install_dev.sh  install_local.sh  install_wheels.sh  pyproject.toml
scripts/: config.py  update_wheels.py
src/happy_cli/: main.py
src/happy_cli/stubs/template-default/: .gitignore  pyproject.toml
src/happy_cli/stubs/template-empty/: README.md  pyproject.toml
src/jampy_cli/: _cfg.py  common_utils.py  config.py  git_actions.py  main.py  module_actions.py  notifier.py  project_actions.py  singleton.py  workspace_actions.py
src/jampy_cli/stubs/template-module-default/: README.md  __init__.py  pyproject.toml
src/jampy_cli/stubs/template-module-default/src/: __init__.py
src/jampy_cli/stubs/template-project-default/: .gitignore  .pre-commit-config.yaml  README.md  install_dev.sh  pyproject.toml
src/jampy_cli/stubs/template-project-default/src/name/: _cfg.py  _config.py
src/jampy_cli/stubs/template-project-default/tests/: test_cfg.py  test_main.py
src/jampy_cli/stubs/template-project-fastapi/: .pre-commit-config.yaml  install_dev.sh  pyproject.toml
src/jampy_cli/stubs/template-project-fastapi/src/name/: _cfg.py  _log.py  app.py  server.py
src/jampy_cli/stubs/template-project-fastapi/tests/: test_log.py  test_server.py
src/jampy_cli/stubs/template-project-swift/: swift_finetune.sh  swift_infer.sh
src/jampy_cli/stubs/template-workspace-swift/: download_pretrained.py  swift_finetune.sh  swift_merge.sh
tests/: test_create_project.py  test_main.py  test_module_actions.py  test_project_actions.py  test_show_info.py
