[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "happy-cli"
version = "0.1.1"
authors = [
  { name="Sheldon Lee", email="sheldonlee@outlook.com" },
]
description = "Commonly used cli tool for myself."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "typer[all]",
  "rich",
  "prompt-toolkit",
  "toml",
  "inflection",
]

[project.optional-dependencies]
dev = ["build", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["happy_cli*"]
exclude = ["tests"] 

[project.scripts]
happy = "happy_cli:app"

[tool.setuptools]
include-package-data = true
