[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "temp_module"
version = "0.0.1"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
dependencies = []
[[project.authors]]
name = "sheldonldev"
email = "xiadanli0320@gmail.com"

[project.optional-dependencies]
dev = []

[tool.sys-dependencies]
apt = []
